syntax = "proto3";

package pb;
option go_package = "/pb";

message C2G_ServerDate{
  int32 RpcId = 90;
}

message G2C_ServerDate
{
  int32 RpcId = 90;
  int32 Error = 91;
  string Message = 92;
  int64 Timestamp=93;
  int32 TimeZoneSeconds=94;
}